Fix for tickets on mobile font

--- a/styles/_newsfeed.scss
+++ b/styles/_newsfeed.scss
@@ -104,7 +104,9 @@
     .gotr-newsfeed-right {
         display: none;
     }
-
+    .gotr-newsfeed {
+        height: 55px;
+    }
     .gotr-selector-box-input {
         width: 50%;
     }
